Config alterations