@@ -1,14 +1,13 @@
-FROM gradle:6.0.1-jdk8 AS build
-COPY --chown=gradle:gradle . /src
-WORKDIR /src
-RUN gradle build --no-daemon 
+### STAGE 1: Build ###
+FROM maven:3.6.1-jdk-8-slim AS build
+RUN mkdir -p /workspace
+WORKDIR /workspace
+COPY pom.xml /workspace
+COPY src /workspace/src
+RUN mvn -f pom.xml clean package
 
-FROM openjdk:8-jre-slim
-
+### STAGE 2: Run ###
+FROM openjdk:8-alpine
+COPY --from=build /workspace/target/*.jar app.jar
 EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
